# enact-protocol

./: .env.example  .env.local.example  .gitignore  README.md  designvariant.html  docs.html  nixpacks.toml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ows-create-job.yml  ows-test.yml  test.yml
bot/: Dockerfile  package-lock.json  package.json  tsconfig.json
contracts/: code_library.tolk  jetton_job.tolk  jetton_job_factory.tolk  jetton_job_factory_lib.tolk  job.tolk  job_factory.tolk  job_factory_lib.tolk
deployments/: gas-bench-v1-vs-v2.json  mainnet-libraries-lib-lite.json  mainnet-libraries.json  mainnet-v2-e2e.json  mainnet-v2-fullcycle.json  mainnet-v2-lib-e2e.json  mainnet-v2-lib-fullcycle.json  mainnet-v2-lib-lite-e2e.json  mainnet-v2-lib-lite-fullcycle.json  mainnet-v2-lib-lite.json  mainnet-v2-lib.json  mainnet-v2-opt-e2e.json  mainnet-v2-opt-fullcycle.json  mainnet-v2-opt.json  mainnet-v2.json  testnet-libraries-lib-lite.json  testnet-libraries.json  testnet-v2-e2e.json  testnet-v2-fullcycle.json  testnet-v2-lib-e2e.json  testnet-v2-lib-fullcycle.json  testnet-v2-lib-lite-e2e.json  testnet-v2-lib-lite-fullcycle.json  testnet-v2-lib-lite.json  testnet-v2-lib.json  testnet-v2-mtonga-e2e.json  testnet-v2-mtonga-gas-bench.json  testnet-v2-mtonga.json  testnet-v2-opt-e2e.json  testnet-v2-opt-fullcycle.json  testnet-v2-opt.json  testnet-v2.json
docs/: V2_FINAL_PLAN.md  agentic-wallets.md
indexer/: migration-002-tx-status.sql  migration-003-encrypted-pending.sql  package-lock.json  package.json  supabase-schema.sql  tsconfig.json
mcp-server/: Dockerfile  package-lock.json  package.json  tsconfig.json
plugins/: teleton-enact-plugin.js
python/: .gitignore
python/enact-langchain/: README.md  pyproject.toml
python/enact-langchain/enact_langchain/: __init__.py  _schemas.py  tools.py
python/enact-langchain/examples/: explorer_agent.py  provider_agent.py
python/enact-langchain/tests/: test_read_tools_mock.py  test_tool_signatures.py
python/enact-protocol/: LICENSE  README.md  pyproject.toml
python/enact-protocol/enact_protocol/: __init__.py  agentic_wallet.py  client.py  constants.py  crypto.py  ipfs.py  types.py
python/enact-protocol/enact_protocol/_internal/: __init__.py  cells.py
python/enact-protocol/enact_protocol/wrappers/: __init__.py  jetton_job.py  job.py  job_factory.py
python/enact-protocol/scripts/: smoke_read.py
python/enact-protocol/tests/: test_cells.py  test_constants.py  test_crypto.py  test_types.py
screenshots/: architecture.html  demo.html  tests.html
scripts/: check-mainnet-balance.ts  demo.ts  deploy-factories-lib.ts  deploy-testnet-v2.ts  deployJettonJobFactory.ts  deployJobFactory.ts  deployMainnet.ts  e2e-testnet-fullcycle.ts  e2e-testnet-v2.ts  evaluator-agent.ts  gas-bench-compare.ts  gas-bench-testnet.ts  gen-provider-wallet.ts  publish-library.ts  rebalance-provider.ts  rebalance-to-provider.ts  reindex-content.ts  smoke-agentic.ts  smoke-mcp.sh  smoke_langchain.py  test-streaming.ts
sdk/: README.md  package-lock.json  package.json
site/: package-lock.json  package.json
tests/: AppMode.spec.ts  GasBenchmark.spec.ts  Hooks.spec.ts  JettonJob.spec.ts  Job.spec.ts  JobFactory.spec.ts  LibraryRef.spec.ts  MultiJetton.spec.ts  SetBudgetIncrease.spec.ts
website/: index.html  v0-prompt.md
wrappers/: CodeLibrary.compile.ts  CodeLibrary.ts  JettonJob.compile.ts  JettonJob.ts  JettonJobFactory.compile.ts  JettonJobFactory.ts  JettonJobFactoryLib.compile.ts  JettonJobFactoryLib.ts  Job.compile.ts  Job.ts  JobFactory.compile.ts  JobFactory.ts  JobFactoryLib.compile.ts  JobFactoryLib.ts
x402-bridge/: package-lock.json  package.json
(+60 files in other folders)
