[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enact-langchain"
version = "0.3.0"
description = "LangChain tools for ENACT Protocol — trustless escrow for AI agents on TON"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ENACT Protocol" }]
keywords = ["langchain", "ton", "enact", "ai-agents", "tools", "escrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "enact-protocol>=0.3.0,<0.4.0",
    "langchain-core>=0.3,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://enact.info"
Documentation = "https://enact.info/docs/langchain"
Source = "https://github.com/ENACT-protocol/enact-protocol/tree/master/python/enact-langchain"
Repository = "https://github.com/ENACT-protocol/enact-protocol"
Issues = "https://github.com/ENACT-protocol/enact-protocol/issues"
Changelog = "https://github.com/ENACT-protocol/enact-protocol/commits/master/python/enact-langchain"

[tool.hatch.build.targets.wheel]
packages = ["enact_langchain"]

[tool.hatch.build.targets.sdist]
include = [
    "enact_langchain",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
